--- a/chicken_disease/config/config.yaml
+++ b/chicken_disease/config/config.yaml
@@ -3,6 +3,6 @@ artifacts_root: artifacts
 
 data_ingestion:
     root_dir: artifacts/data_ingestion
-    source_URL: https://github.com/AhmAdO9/Machine_learning/blob/master/chicken_disease/Chicken-fecal-images%20(8).zip
+    source_URL: https://raw.githubusercontent.com/AhmAdO9/Machine_learning/master/chicken_disease/Chicken-fecal-images%20(8).zip
     local_data_file: artifacts/data_ingestion/data.zip
     unzip_dir: artifacts/data_ingestion 
